--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
   "scripts": {
     "build": "rollup -c"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "elvisoliveira",
+  "license": "MIT",
   "devDependencies": {
+    "@rollup/plugin-eslint": "^9.0.5",
     "@rollup/plugin-multi-entry": "^6.0.1",
+    "@rollup/plugin-replace": "^5.0.5",
     "rollup": "^4.14.1",
     "userscript-meta": "^1.0.1"
   }
